# Visualizer

./: .gitignore  README.md  index.html  start.bat  styles.css
fuser/: .gitignore  README.md  pyproject.toml
fuser/fuser/: __init__.py  analysis.py  audio_io.py  cli.py  gui.py  pipeline.py  preview.py  render.py
fuser/tests/: test_engine.py
src/: main.js
src/audio/: bpm.js  engine.js  metadata.js
src/panels/: _canvas.js  center.js  header.js  histogram.js  infoBar.js  routing.js  spectrum.js  waveform.js
