[project]
name = "fuser"
version = "0.1.0"
description = "Prototype engine for beat-aware audio transitions between two tracks."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "soundfile",
]

[project.optional-dependencies]
quality = [
  "pyrubberband",
]

[project.scripts]
fuser = "fuser.cli:main"
fuser-gui = "fuser.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
